name: proto-lens-json
version: 0.3.0
synopsis: JSON serialization for proto-lens.
description: Serialize protocol buffer messages as JSON.

  Uses the mapping defined in https://developers.google.com/protocol-buffers/docs/proto3#json .
  Does not encode the well-known types like Any, Timestamp, Duration yet.

homepage: https://github.com/piesync/proto-lens-json
license: BSD3
license-file: LICENSE
author: Ewout Van Troostenberghe
copyright: 2017 PieSync
category: Data
build-type: Simple
cabal-version: >=1.10

library
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules: Data.ProtoLens.JSON
  build-depends: base >= 4.8 && < 4.12,
                 aeson >= 1.2 && < 2.0,
                 base64-bytestring >= 1.0 && < 1.1,
                 bytestring,
                 containers,
                 lens-family,
                 proto-lens >= 0.4 && < 0.5,
                 text

test-suite tests
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  other-modules: Proto.JsonFormatProto3
                 Proto.JsonFormatProto3_Fields
  build-depends: base,
                 aeson,
                 aeson-qq,
                 containers,
                 hspec,
                 lens-family,
                 proto-lens,
                 proto-lens-runtime,
                 proto-lens-json,
                 proto-lens-protoc
