name: proto-lens-json
version: 0.6.0
synopsis: JSON serialization for proto-lens.
description: Serialize protocol buffer messages as JSON.

  Uses the mapping defined in https://developers.google.com/protocol-buffers/docs/proto3#json .
  Does not encode the well-known types like Any, Timestamp, Duration yet.

homepage: https://github.com/piesync/proto-lens-json
license: BSD3
license-file: LICENSE
author: Ewout Van Troostenberghe
copyright: 2017 PieSync
category: Data
build-type: Simple
cabal-version: >=1.10

library
  default-language: Haskell2010
  hs-source-dirs: src
  ghc-options: -Wall -Werror
  exposed-modules: Data.ProtoLens.JSON
  other-modules: Data.ProtoLens.JSON.Decode
                 Data.ProtoLens.JSON.Encode
                 Data.ProtoLens.JSON.Util
  build-depends: base >= 4.8 && < 4.17,
                 aeson >= 2.0 && < 2.1,
                 attoparsec,
                 base64-bytestring >= 1.0 && < 1.3,
                 bytestring,
                 containers,
                 lens-family,
                 proto-lens >= 0.4 && < 0.8,
                 scientific,
                 text,
                 vector

test-suite tests
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  other-modules: Proto.JsonFormatProto3
                 Proto.JsonFormatProto3_Fields
  build-depends: base,
                 aeson,
                 aeson-qq,
                 containers,
                 hspec,
                 lens-family,
                 proto-lens,
                 proto-lens-runtime,
                 proto-lens-json,
                 proto-lens-protoc
